{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 11,
  "lineage": "7c49acf2-f95d-54a3-b6ac-fdb94ec07024",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0473de050f4597b4a",
            "domain": "vpc",
            "id": "eipalloc-0473de050f4597b4a",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-193-15-194.us-west-1.compute.amazonaws.com",
            "public_ip": "54.193.15.194",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "development",
              "Name": "mern-nat-eip"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "mern-nat-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:975050024946:internet-gateway/igw-096de2828adaf866d",
            "id": "igw-096de2828adaf866d",
            "owner_id": "975050024946",
            "tags": {
              "Environment": "development",
              "Name": "mern-igw"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "mern-igw"
            },
            "vpc_id": "vpc-0730c91efc0a32627"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0473de050f4597b4a",
            "connectivity_type": "public",
            "id": "nat-0de390a4a2fabfaf9",
            "network_interface_id": "eni-0b16cba5121fa2542",
            "private_ip": "10.0.1.12",
            "public_ip": "54.193.15.194",
            "subnet_id": "subnet-0ad7978bdf013bf53",
            "tags": {
              "Environment": "development",
              "Name": "mern-nat-gateway"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "mern-nat-gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:975050024946:route-table/rtb-0be5be3b2441cdf57",
            "id": "rtb-0be5be3b2441cdf57",
            "owner_id": "975050024946",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0de390a4a2fabfaf9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "development",
              "Name": "mern-private-rt"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "mern-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0730c91efc0a32627"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:975050024946:route-table/rtb-0b3d6650ee42c99c0",
            "id": "rtb-0b3d6650ee42c99c0",
            "owner_id": "975050024946",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-096de2828adaf866d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "development",
              "Name": "mern-public-rt"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "mern-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0730c91efc0a32627"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036397c375578e8d2",
            "route_table_id": "rtb-0be5be3b2441cdf57",
            "subnet_id": "subnet-03a14ab7b21287754"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069773ecc47d03ed3",
            "route_table_id": "rtb-0b3d6650ee42c99c0",
            "subnet_id": "subnet-0ad7978bdf013bf53"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:975050024946:subnet/subnet-03a14ab7b21287754",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a14ab7b21287754",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050024946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "mern-private-subnet"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "mern-private-subnet"
            },
            "vpc_id": "vpc-0730c91efc0a32627"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:975050024946:subnet/subnet-0ad7978bdf013bf53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad7978bdf013bf53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975050024946",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "development",
              "Name": "mern-public-subnet"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "mern-public-subnet"
            },
            "vpc_id": "vpc-0730c91efc0a32627"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:975050024946:vpc/vpc-0730c91efc0a32627",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-006e21a5e1b36d6ed",
            "default_route_table_id": "rtb-016fd92a5e76533fa",
            "default_security_group_id": "sg-081d279ce6aa88c2b",
            "dhcp_options_id": "dopt-09333770e5ec5d010",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0730c91efc0a32627",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-016fd92a5e76533fa",
            "owner_id": "975050024946",
            "tags": {
              "Environment": "development",
              "Name": "mern-vpc"
            },
            "tags_all": {
              "Environment": "development",
              "Name": "mern-vpc"
            }
          }
        }
      ]
    }
  ]
}